fix(propslayout): icons v align

--- a/src/modules/propsIcons/propsIcons.css
+++ b/src/modules/propsIcons/propsIcons.css
@@ -10,7 +10,7 @@ body[data-awpr-block-props-icons] .block-properties:not(.page-properties) .page-
     color: #888888AA;
     font-size: 1.13em;
     font-weight: 400;
-    margin-right: 0.2em;
+    margin-right: 0.3em;
 }
 
 /* edit */
@@ -22,20 +22,6 @@ body[data-awpr-page-props-icons] .pre-block > .flex > .editor-wrapper > .editor-
         linear-gradient(transparent 0%, transparent 96%, #88888833 100%) 0 0 / 1px 1.5em repeat local !important;
     white-space: pre;
     overflow: auto;
-}
-
-
-/*  Flow theme fix*/
-.page-property-key {
-    min-width: unset !important;
-    max-width: unset !important;
-}
-.block-properties::before,
-.block-properties .inline.mr-1::before {
-    display: none !important;
-}
-.ls-block .page-reference:hover {
-    filter: none;
 }
 
 
@@ -54,4 +40,18 @@ body[data-awpr-page-props-icons] .pre-block > .flex > .editor-wrapper > .editor-
     top: 1px;
     font-family: tabler-icons;
     font-size: 1.13em;
+}
+
+
+/*  Flow theme fix*/
+.page-property-key {
+    min-width: unset !important;
+    max-width: unset !important;
+}
+.block-properties::before,
+.block-properties .inline.mr-1::before {
+    display: none !important;
+}
+.ls-block .page-reference:hover {
+    filter: none;
 }
